k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-backend-service
  namespace: app-deployment
spec:
  selector:
    app: nestjs-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
